--- a/AtkTennisWeb/Views/Home/ListUser.cshtml
+++ b/AtkTennisWeb/Views/Home/ListUser.cshtml
@@ -54,8 +54,8 @@
 
 
                                             <td>
-                                                <button class="btn btn-outline-success" id="@item.UserId" onclick="openUpdateModal(this.id)">Güncelle</button>
-                                                <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) ">Sil</button>
+                                                <button class="btn btn-outline-success" id="@item.UserId" onclick="openUpdateModal(this.id)"><i class="fas fa-edit"></i></button>
+                                                <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) "><i class="fas fa-trash"></i></button>
                                             </td>
 
                                         </tr>
@@ -562,7 +562,7 @@
             userObj.password = $("#password").val();
             userObj.gender = "Male";
 
-            debugger;
+
 
             if (userObj.password != "" || userObj.username != "") {
 
